test/files/run/t6381.check

scala> import scala.language.experimental.macros
import scala.language.experimental.macros

scala> def pos_impl(c: scala.reflect.macros.blackbox.Context): c.Expr[String] = {
  import c.universe._
  c.Expr[String](Literal(Constant(c.enclosingPosition.getClass.toString)))
}
pos_impl: (c: scala.reflect.macros.blackbox.Context)c.Expr[String]

scala> def pos: String = macro pos_impl
<console>:13: error: macro implementation reference has wrong shape. required:
macro [<static object>].<method name>[[<type args>]] or
macro [<macro bundle>].<method name>[[<type args>]]
       def pos: String = macro pos_impl
                               ^

scala> pos
<console>:13: error: not found: value pos
       pos
       ^

scala> :quit
